# kaggle-lead-scoring-full-cycle-to-cloud-deployment

./: .dockerignore  AGENTS.md  Dockerfile  EDA.ipynb  INSTRUCTIONS.txt  README.md  TASK.txt  app.py  cloud_test.py  lead_scoring_model.joblib  local_test.py  pyproject.toml  train.py
